--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -12189,7 +12189,7 @@ options "bibtotoc,/home/lfborjas/Aplicaciones/apa-good"
 
 \begin_layout Chapter
 \start_of_appendix
-Requisición de recursos de laboratorio
+Correos electrónicos de comunicación con la facultad
 \begin_inset CommandInset label
 LatexCommand label
 name "cha:resources-requirement"
@@ -12199,13 +12199,22 @@ name "cha:resources-requirement"
 
 \end_layout
 
+\begin_layout Section
+Requisición de recursos de laboratorio
+\end_layout
+
 \begin_layout Standard
-A continuación, una copia 
+Para la obtención, procesamiento y uso del 
 \emph on
-verbatim
+corpus 
 \emph default
- del correo enviado a la facultad y el administrador del laboratorio para
- el uso del mismo durante el proyecto:
+documental, durante la etapa de desarrollo y la presentación, se solicitó
+ el uso de un servidor del laboratorio destinado a la carrera de ingeniería
+ en sistemas computacionales.
+\end_layout
+
+\begin_layout Subsection
+Copia del correo electrónico de solicitud
 \end_layout
 
 \begin_layout Quote
@@ -12277,6 +12286,116 @@ Agradeciendo de antemano su asistencia en este asunto,
 
 \begin_layout Quote
 Luis Felipe Borjas
+\end_layout
+
+\begin_layout Subsection
+Copia de la respuesta de la facultad
+\end_layout
+
+\begin_layout Quote
+De: Jorge Garcia <jorge.garcia@unitec.edu>
+\end_layout
+
+\begin_layout Quote
+27 de abril de 2010 14:31
+\end_layout
+
+\begin_layout Quote
+Para: Luis Felipe Borjas <lfborjas@unitec.edu> 
+\end_layout
+
+\begin_layout Quote
+Cc: dmartinezh@unitec.edu 
+\end_layout
+
+\begin_layout Quote
+Hola, 
+\end_layout
+
+\begin_layout Quote
+favor realizar la instalación requerida en un servidor virtual del laboratorio.
+ El servidor quedaría inhabilitado una vez haya tenido la terna.
+\end_layout
+
+\begin_layout Quote
+Jorge.
+ 
+\end_layout
+
+\begin_layout Section
+Solicitud de accceso al servidor virtual desde fuera del laboratorio
+\end_layout
+
+\begin_layout Standard
+Una vez provisto para el desarrollo del proyecto un servidor virtual, se
+ encontró la dificultad de no poder acceder al mismo sino desde dentro del
+ laboratorio para estudiantes de sistemas computacionales, dado que sería
+ redundante y poco factible tener que volver a obtener y procesar el 
+\emph on
+corpus
+\emph default
+ documental en la computadora personal del autor para el día de presentación
+ en la terna de graduación, se solicitó a la facultad acceso intra-universitario
+ al mismo.
+ 
+\end_layout
+
+\begin_layout Subsection
+Copia del correo electrónico de solicitud
+\end_layout
+
+\begin_layout Quote
+De: Luis Felipe Borjas <lfborjas@unitec.edu>
+\end_layout
+
+\begin_layout Quote
+1 de mayo de 2010 13:53
+\end_layout
+
+\begin_layout Quote
+Para: Jorge Garcia <jorge.garcia@unitec.edu> 
+\end_layout
+
+\begin_layout Quote
+Cc: Daniel Martínez <dmartinezh@unitec.edu>, Gerardo Romero <gromerom@unitec.edu>
+\end_layout
+
+\begin_layout Quote
+Buenas tardes, Ingeniero
+\end_layout
+
+\begin_layout Quote
+Mi proyecto de graduación, como le comenté en el correo de requisición de
+ recursos de laboratorio, requiere cantidades considerables de datos (los
+ datos que usaré en esta etapa y para la terna, por ejemplo, ocupan, en
+ crudo -es decir, sin procesamiento alguno- 3.7 Gb de espacio) Y, luego del
+ procesamiento que he de hacer, usaría, en el peor de los casos, unos 27
+ Gb de información en total (antes, claro, de una posible purga de datos
+ redundantes).
+ Con esto en vista, mi mayor preocupación es que, para el día de mi terna
+ de graduación, tenga que mover - ¡y volver a procesar!- esta ingente cantidad
+ de datos a mi computadora personal, puesto que sólo puedo acceder al servidor
+ virtual que me fue proporcionado desde dentro del laboratorio de sistemas.
+\end_layout
+
+\begin_layout Quote
+Mi solicitud, entonces, consiste en que, al menos para la fecha de la terna
+ (y, muy preferiblemente, desde antes, para pruebas), se me facilite acceso
+ a ese servidor desde otros lugares de la universidad.
+ Solicito esto porque estoy consciente que el acceso desde fuera de la universid
+ad es una tarea más difícil -aunque sería definitivamente preferible.
+\end_layout
+
+\begin_layout Quote
+Agradeciendo su apoyo, 
+\end_layout
+
+\begin_layout Quote
+Luis Felipe Borjas
+\end_layout
+
+\begin_layout Subsection
+Copia de la respuesta de la facultad
 \end_layout
 
 \end_body
